name:                pizza
version:             0.1.0.0
-- synopsis:            
description:         Pizza ingredient choosing helper
license:             AGPL3
license-file:        LICENSE
author:              Robert Klotzner
maintainer:          robert@gonimo.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.11
                     , reflex-dom
                     , aeson
                     , lens
                     , text
                     , bytestring
                     , ghcjs-dom
                     , safe
                     , containers
                     , reflex
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010
